Bug 503392 - Crash when trying to sign a file
Summary: Crash when trying to sign a file
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.0.0.250400
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Ingo Klöcker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-26 14:30 UTC by Oleg
Modified: 2025-05-06 10:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.0.0.250401
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/167128


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg 2025-04-26 14:30:19 UTC
SUMMARY
When I try to sign a file (either from main window or from the context menu) using Kleopatra crashes.

STEPS TO REPRODUCE
1. Open Kleopatra
2. Press "Sign file"
3. Select file in file dialog

OBSERVED RESULT
Kleopatra crashes

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Kernel Version: 6.14.4-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9800X3D 8-Core Processor
Memory: 62.5 ГиБ of RAM
Graphics Processor: AMD Radeon RX 6700 XT
Manufacturer: ASUS

ADDITIONAL INFORMATION
Coredump should've been already sent with DrKonqi
Comment 1 Ingo Klöcker 2025-05-06 10:04:25 UTC
Git commit da306d536c8fa7313747410ab828b34d808aa750 by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 06/05/2025 at 09:56.
Pushed by kloecker into branch 'master'.

Initialize pointer variables to avoid a crash

This fixes a crash that occurs when people try to sign or encrypt files
if they have only OpenPGP keys imported in GnuPG.

M  +2    -2    src/crypto/gui/signencryptwidget.cpp

https://invent.kde.org/pim/kleopatra/-/commit/da306d536c8fa7313747410ab828b34d808aa750
Comment 2 Ingo Klöcker 2025-05-06 10:04:51 UTC
Git commit 1417df985de5990d15dabc27f29685a1697d3294 by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 06/05/2025 at 10:04.
Pushed by kloecker into branch 'release/25.04'.

Initialize pointer variables to avoid a crash

This fixes a crash that occurs when people try to sign or encrypt files
if they have only OpenPGP keys imported in GnuPG.

(cherry picked from commit da306d536c8fa7313747410ab828b34d808aa750)

M  +2    -2    src/crypto/gui/signencryptwidget.cpp

https://invent.kde.org/pim/kleopatra/-/commit/1417df985de5990d15dabc27f29685a1697d3294