Initialize pointer variables to avoid a crash

This fixes a crash that occurs when people try to sign or encrypt files
if they have only OpenPGP keys imported in GnuPG.

BUG: 503392

(cherry picked from commit da306d536c8fa7313747410ab828b34d808aa750)